--- a/school/elec_302/lab_05/tex/report.tex
+++ b/school/elec_302/lab_05/tex/report.tex
@@ -43,9 +43,9 @@ efficiency.
 \subsection{EMS Workstation Set-up}
 
 The main power switch and voltage control knob were verified to be OFF and
-fully counterclockwise, respectively. The voltmeter selector switch was set to
+turned fully CCW, respectively. The voltmeter selector switch was set to
 position 7--N. The Low Power Inputs for the \gls{pm}/\gls{dyno} module and the
-\gls{dai} were connected to the 24-V supply. The 24-V supply was turned on. The
+\gls{dai} were connected to the 24-V supply, which was then turned on. The
 \gls{dai} USB was connected to the computer. On the computer, the file for Lab
 05 was opened in the EMS application, and the metering window was set to
 continuous refresh.
@@ -53,47 +53,42 @@ continuous refresh.
 \subsection{Prime Mover Operation}
 
 \label{part1} The circuit represented by Figure~\ref{fig:circuit_01} was
-constructed. The \gls{pm} module on the left side of the \gls{pm}/\gls{dyno}
-workstation was used in Part 1. Special, smaller sized connection wires were
-used to connect the torque (T) and speed (N) terminals from the
-\gls{pm}/\gls{dyno} module to the \gls{dai} module. The white ground terminal
-was also connected between the two modules. On the \gls{pm}/\gls{dyno} control
-switches, the Mode switch was set to \gls{pm} and the Display switch was set to
-Speed (n).  The main voltage supply was turned ON and the DC supply voltage was
+constructed. Special, low-power connection wires were used to connect the
+torque ($T$), speed ($N$), and ground terminals from the \gls{pm}/\gls{dyno}
+modules to the \gls{dai} module. On the \gls{pm}/\gls{dyno} control switches,
+the mode switch was set to \gls{pm} and the display switch was set to Speed
+($n$). The main voltage supply was turned ON and the DC supply voltage was
 adjusted to 30-V. Both the installed analog EMS voltmeter and the metering
-window were monitored for proper indications. The DC voltage, $E_1$, the speed,
-$n$, indicated on the \gls{pm} digital display, and the speed N indicated on
-the computer metering window were measured and recorded. The direction of
-rotation of the prime mover was also recorded. These values are shown in
-Table~\ref{tab:table_01}. On the \gls{pm}/\gls{dyno} module, the Display switch
-was set to the Torque position.  The friction torque, $T_f$, indicated on the
-\gls{pm} digital display and the Torque, $T$, indicated in the metering window
-were measured and recorded. These values are also shown in
-Table~\ref{tab:table_01}.  On the \gls{pm}/\gls{dyno} module, the Mode switch
-was set to the {Dyn}. position. After a few seconds, the Mode was set back to
-the PM position. The voltage control knob was turned fully CCW and the main
-power switch was set to {OFF}.  The polarity of the leads at the \gls{pm} input
-was then reversed. The main power switch was turned ON and the voltage supply
-was adjusted to 30-V. The DC voltage, $E_1$, the speed, $n$, indicated on the
-\gls{pm} digital display, and the speed N indicated on the computer metering
-window were measured and recorded. The direction of rotation of the prime mover
-was also recorded. These values are shown in Table~\ref{tab:table_01}. The
-voltage control knob was set fully CCW and the main power switch to {OFF}. The
-leads were then connected to their original polarity.
+window were monitored for proper indications. The DC voltage ($E_1$), the speed
+($n$), indicated on the \gls{pm} digital display, and the speed ($N$) and
+direction of rotation were measured and recorded in Table~\ref{tab:table_01}.
+On the \gls{pm}/\gls{dyno} module, the Display switch was set to the Torque
+position. The friction torque ($T_f$), indicated on the \gls{pm} digital
+display and the torque ($T$), indicated in the metering window were measured
+and recorded in Table~\ref{tab:table_01}.  On the \gls{pm}/\gls{dyno} module,
+the Mode switch was set to the {Dyn}. position.  After a few seconds, the Mode
+was set back to the PM position. The main power switch was set to OFF the
+voltage control knob was turned fully {CCW}. The polarity of the leads at the
+\gls{pm} input was then reversed. The main power switch was turned ON and the
+voltage supply was adjusted to 30-V. The DC voltage ($E_1$), the speed ($n$),
+indicated on the \gls{pm} digital display, and the speed ($N$) and direction of
+rotation of the \gls{pm} were recorded in Table~\ref{tab:table_01}. The main
+power switch to was set to {OFF} and voltage control knob was was fully {CCW}.
+The leads were then connected to their original polarity.
 
 The power supply was set to {ON}. On the computer application, the Data Table
-Applications window was opened. The \gls{pm} Voltage, $E_1$, speed, $N$, and
-torque, $T$, were checked as the values to be recorded in the table. Using the
-voltage control knob, the \gls{pm} speed was increased in approximately 300-rpm
-increments from 0--2100-rpm. At each 300-rpm increment, the values for $E_1$,
-$N$, and $T$ were recorded into the Data Table. This data is shown in
+Applications window was opened. The \gls{pm} Voltage ($E_1$), speed ($N$), and
+torque, ($T$), were checked as the values to be recorded in the table. Using
+the voltage control knob, the \gls{pm} speed was increased in approximately
+300-rpm increments from 0--2100-rpm. At each 300-rpm increment, the values for
+$E_1$, $N$, and $T$ were recorded into the Data Table. This data is shown in
 Table~\ref{tab:table_02}. The voltage control knob was set fully CCW, and the
 main power switch set to {OFF}. On the computer application, the Graph window
-was opened. The Graph window was set to obtain a plot of \gls{pm} Speed, $N$,
-vs.  \gls{pm} Voltage, $E_1$. The graph was created and then saved.  This graph
+was opened. The Graph window was set to obtain a plot of \gls{pm} Speed ($N$),
+vs. \gls{pm} Voltage ($E_1$). The graph was created and then saved.  This graph
 is shown in Figure~\ref{fig:plot_01}. The graph window was then set to obtain a
-plot of \gls{pm} friction torque, $T$, vs. \gls{pm} Speed (rpm). The graph was
-created and then saved. This graph is shown in Figure~\ref{fig:plot_02}.
+plot of \gls{pm} friction torque ($T$), vs. \gls{pm} Speed (rpm), shown in
+Figure~\ref{fig:plot_02}.
 
 \subsection{Dynamometer Operation}
 
@@ -114,16 +109,16 @@ Table~\ref{tab:table_03}. The Display switch was returned to Speed. On the
 \gls{dyno} module, the Load Control knob was slowly adjusted clockwise until
 the torque on the digital display indicated 2.0 Nm. The voltage control knob
 was then adjusted so that the \gls{pm} rotated at 1500-rpm. The opposition
-torque, $T_{PM}$, indicated by the \gls{pm} digital display and the
-non-corrected output torque, $T_{NC}$, in the metering window were measured and
-recorded. These values are shown in Table~\ref{tab:table_03}. On the computer
-in the metering window, the torque correction function (mode C) for the torque
-meter was selected. The meter was then set to read the \gls{pm} output torque
-corrected for belt friction and windage. The voltage control knob was then
-adjusted so that the \gls{pm} rotated at 1500-rpm.  The corrected torque $T_C$
-was then indicated in the metering window. This value was recorded and is shown
-in Table~\ref{tab:table_03}. The voltage supply was set fully CCW and the main
-power switch to OFF.
+torque ($T_{PM}$), indicated by the \gls{pm} digital display and the
+non-corrected output torque ($T_{NC}$), in the metering window were measured
+and recorded. These values are shown in Table~\ref{tab:table_03}. On the
+computer in the metering window, the torque correction function (mode C) for
+the torque meter was selected. The meter was then set to read the \gls{pm}
+output torque corrected for belt friction and windage. The voltage control knob
+was then adjusted so that the \gls{pm} rotated at 1500-rpm.  The corrected
+torque ($T_C$) was then indicated in the metering window. This value was
+recorded in Table~\ref{tab:table_03}. The voltage supply was set fully CCW and
+the main power switch to OFF.
 
 \subsection{Motor Losses and Efficiency}
 
@@ -136,29 +131,30 @@ turned fully {CCW}. On the metering window, the torque correction function
 (mode C) for the torque meter was selected. The voltage supply knob was then
 adjusted so that the \gls{pm} rotated at 1500-rpm. On the \gls{dyno} module,
 the Load Control knob was adjusted until the digital display indicated 1.0-Nm.
-The \gls{dyno} speed, $N$, and the corrected output torque, $T_C$, from the
+The \gls{dyno} speed ($N$), and the corrected output torque ($T_C$), from the
 metering window were measured and recorded. These values are shown in
-Table~\ref{tab:table_04}. The \gls{pm} mechanical output power, $P_{mech}$,
-indicated on meter, $P_m$, the \gls{pm} electrical input power, $P_{in}$,
-indicated on meter $PQS_1$, and the \gls{pm} efficiency, $\eta$, indicated on
+Table~\ref{tab:table_04}. The \gls{pm} mechanical output power ($P_{mech}$),
+indicated on meter, $P_m$, the \gls{pm} electrical input power ($P_{in}$),
+indicated on meter $PQS_1$, and the \gls{pm} efficiency ($\eta$), indicated on
 meter $A$ were measured and recorded. These values are shown in
 Table~\ref{tab:table_05}.
 
 On the \gls{dyno} module, the Load Control knob was slowly adjusted CCW until
 the indicated torque display read 0-Nm. The voltage control knob was then
 adjusted until the \gls{pm} rotated at 1500-rpm. The Data Table Application was
-opened on the computer. The \gls{pm} voltage, $E_1$, current, $I_1$, electrical
-input power, $PQS_1$, speed, $N$, output torque, $T$, mechanical output power,
-$P_{m}$, and efficiency, $A$, were set to be recorded in the Data Table. On the
-\gls{dyno} module, the Load Control knob was adjusted so that the torque
-indicated on its digital display increased from 0--2.0-Nm in 0.2-Nm increments.
-For each increment value, the values to be recorded were entered into the Data
-Table.  These values are shown in Table~\ref{tab:table_06}. The voltage control
-knob was set fully CCW and the main power switch to {OFF}. The Graph window on
-the computer was then opened. It was set to obtain a plot of \gls{pm}
-efficiency vs. \gls{pm} mechanical output power. This graph was created and
-saved. It is shown in Figure~\ref{fig:plot_03}. The 24-V power supply was then
-turned OFF and the timing belt removed.
+opened on the computer. The \gls{pm} voltage ($E_1$), current ($I_1$),
+electrical input power ($PQS_1$), speed ($N$), output torque ($T$), mechanical
+output power ($P_{m}$), and efficiency ($A$), were set to be recorded in the
+Data Table. On the \gls{dyno} module, the Load Control knob was adjusted so
+that the torque indicated on its digital display increased from 0--2.0-Nm in
+0.2-Nm increments.  For each increment value, the values to be recorded were
+entered into the Data Table. These values are shown in
+Table~\ref{tab:table_06}. The voltage control knob was set fully CCW and the
+main power switch to {OFF}. The Graph window on the computer was then opened.
+It was set to obtain a plot of \gls{pm} efficiency vs. \gls{pm} mechanical
+output power. This graph was created and saved. It is shown in
+Figure~\ref{fig:plot_03}. The 24-V power supply was then turned OFF and the
+timing belt removed.
 
 \section{Results}
 
@@ -313,21 +309,21 @@ motor became closer to 1.
 In Part 2, when the \gls{dyno} was connected to the \gls{pm}, the \gls{pm}
 generated a larger torque than it generated without the \gls{dyno}. This was
 because of the added belt friction and friction torque of the \gls{dyno}
-bearings.  When the \gls{dyno} was set to generate its own magnetic torque of 2
-Nm, the \gls{pm} rotational speed decreased and thus its opposition torque in
+bearings.  When the \gls{dyno} was set to generate its own magnetic torque of
+2-Nm, the \gls{pm} rotational speed decreased and thus its opposition torque in
 the opposite direction of motion increased. The non-corrected torque generated
-by the \gls{pm} was without the loading of the \gls{dyno} taken into
-account. When the the corrected torque was generated, the \gls{dyno} loading
-was taken into account and thus this value represented the true torque produced
-by the \gls{pm}. The corrected torque was greater than the non-corrected torque
-by approximately the same amount that the \gls{pm} generated when the
-\gls{dyno} had not produced its own magnetic torque.
+by the \gls{pm} was without the loading of the \gls{dyno} taken into account.
+When the the corrected torque was generated, the \gls{dyno} loading was taken
+into account and thus this value represented the true torque produced by the
+\gls{pm}. The corrected torque was greater than the non-corrected torque by
+approximately the same amount that the \gls{pm} generated when the \gls{dyno}
+had not produced its own magnetic torque.
 
 In Part 3, the current was being increased because the \gls{pm}/\gls{dyno} was
 set up as a motor. As the torque produced by the \gls{dyno} increased, the
 voltage produced by the \gls{pm} decreased. However, the current increased as
 the \gls{pm} rotational speed decreased. The mechanical output power was less
-than the electrical input power.  Electric power was being converted to
+than the electrical input power. Electric power was being converted to
 mechanical power.
 
 \section*{Equations}
