--- a/school/elec_302/lab_05/tex/report.tex
+++ b/school/elec_302/lab_05/tex/report.tex
@@ -239,7 +239,7 @@ timing belt removed.
 \begin{table}[H]
   \centering
   \begin{tabular}{*{4}{c}}
-    & Measured & Calculated & Percent Deviation \\
+    & \textbf{Measured} & \textbf{Calculated} & \textbf{Percent Deviation} \\
     \hline
     $P_{mech}$ N-m & 182.2 & 183.4  & 0.65  \\
     $P_{in}$ N-m & 241.5 & --- & --- \\
